Worked on making the template usable with locals

--- a/views/page.jade
+++ b/views/page.jade
@@ -11,11 +11,11 @@ html(lang="en")
 		title= title
 		meta(name="description", content=description)
 
-		meta(itemprop="image",content="http://www.igvita.com/img/johann.jpg")
+		meta(itemprop="image",content="http://www.johann.co.za/img/johann.jpg")
 		meta(name="viewport",content="width=device-width,initial-scale=1,maximum-scale=1")
 
 		link(rel="alternate",type="application/rss+xml",title="Johann du Toit - RSS Feed",href="http://www.johanndutoit.co.za/feed")
-		link(rel="canonical",href="http://www.igvita.com/")
+		link(rel="canonical",href="http://www.johann.co.za/")
 
 		link(href="http://fonts.googleapis.com/css?family=Open+Sans:400,600",rel="stylesheet",media="all")
 		link(href="/css/bootstrap.min.css",rel="stylesheet",type="text/css",media="all")
@@ -43,7 +43,7 @@ html(lang="en")
 		footer
 			.container(style="margin: 0 auto;")
 				.span6.offset2
-					p Copyright 2012 - 2012 Johann du Toit
+					p Copyright Johann du Toit 2012 - 2012
 				.span2
 					a(href="/feed",style="margin-right:10px;") Subscribe to RSS
 					a(href="/") About
