--- a/views/home.jade
+++ b/views/home.jade
@@ -13,18 +13,9 @@ block contents
 				div(style="margin:20px;")
 					h3 Recent Posts
 					table.table(style="margin:0;margin-top:10px;")
-						tr
-							td
-								a(href="#") Testing
-							td(style="width:80px;")
-								small 20 Feb 2012
-						tr
-							td
-								a(href="#") Testing
-							td(style="width:80px;")
-								small 20 Feb 2012
-						tr
-							td
-								a(href="#") Testing
-							td(style="width:80px;")
-								small 20 Feb 2012
+						- each post in posts
+							tr
+								td
+									a(href=post.url) #{post.title}
+								td(style="width:80px;")
+									small #{post.date}
