Almost there. Just need to add the RSS Feed now

--- a/views/home.jade
+++ b/views/home.jade
@@ -11,6 +11,7 @@ block contents
 					p(style="font-size:20px;") Keep it Simple Stupid
 					small Now that's a Motto!
 				div(style="margin:20px;")
+					a(href="/archive.html",style="float:right;margin:5px;") View All Posts
 					h3 Recent Posts
 					table.table(style="margin:0;margin-top:10px;")
 						- each post in posts
