--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -34,7 +34,7 @@ mixin about_me_footer(posts)
 									a(href=post.url) #{post.title}
 
 						p(style="margin-left:10px;margin-top:15px;")
-							a(href="/archive")
+							a(href="/archive.html")
 								View all Posts
 
 					.span3#meta_image
