--- a/views/page.jade
+++ b/views/page.jade
@@ -43,12 +43,10 @@ html(lang="en")
 		footer
 			.container(style="margin: 0 auto;")
 				.span6.offset2
-					p Copyright Johann du Toit 2012 - 2012
+					p Copyright Johann du Toit 2012 - #{current_year}
 				.span2
 					a(href="/feed",style="margin-right:10px;") Subscribe to RSS
 					a(href="/") About
 
-		script(src="/js/jquery-1.7.2.min.js",type="text/javascript")
-		script(src="/js/bootstrap.min.js",type="text/javascript")
 		script(src="/js/modernizr-2.0.6.min.js",type="text/javascript")
 		block scripts
