--- a/views/page.jade
+++ b/views/page.jade
@@ -14,7 +14,7 @@ html(lang="en")
 		meta(itemprop="image",content="http://www.johann.co.za/img/johann.jpg")
 		meta(name="viewport",content="width=device-width,initial-scale=1,maximum-scale=1")
 
-		link(rel="alternate",type="application/rss+xml",title="Johann du Toit - RSS Feed",href="http://www.johanndutoit.co.za/feed")
+		link(rel="alternate",type="application/rss+xml",title="Atom Feed",href="/atom.xml")
 		link(rel="canonical",href="http://www.johann.co.za/")
 
 		link(href="http://fonts.googleapis.com/css?family=Open+Sans:400,600",rel="stylesheet",media="all")
@@ -30,11 +30,11 @@ html(lang="en")
 				.row
 					.span8.offset2
 						#title-bar
-							a(style="float:right;margin-top:2px;",href="/") About
+							a#header_about_link(style="float:right;margin-top:2px;",href="/") About
 							a#blog-name(href="/")
 								h3 Johann du Toit
-							span(style="margin-left:5px;margin-top:5px;") |
-							p(style="margin-top:5px;") Check out my crazy adventures with Computers.
+							span#slogan-block(style="margin-left:5px;margin-top:5px;")
+								p(style="style="float:left;") | My crazy adventures with Computers.
 						.clearfix(style="margin-bottom:10px;")
 		
 		#mainpage
@@ -42,11 +42,13 @@ html(lang="en")
 
 		footer
 			.container(style="margin: 0 auto;")
-				.span6.offset2
+				.span4.offset2
 					p Copyright Johann du Toit 2012 - #{current_year}
-				.span2
-					a(href="/feed",style="margin-right:10px;") Subscribe to RSS
-					a(href="/") About
+				.span4
+					a#footer_subscribe_link(href="/atom.xml",style="margin-right:10px;") Subscribe to RSS
+					a#footer_about_link(href="/") About
 
-		script(src="/js/modernizr-2.0.6.min.js",type="text/javascript")
+		script(src="/js/prettify.min.js",type="text/javascript")
+		script(type="text/javascript")
+			window.prettyPrint && prettyPrint()
 		block scripts
