Updated the New CV Homepage, page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,6 +204,10 @@ blockquote footer a, blockquote footer a:visited, blockquote footer a:hover {
   #footer_subscribe_link, #footer_about_link {
     display:none;
   }
+
+  .bigger-size {
+    font-size:15px;
+  }
 }
 
 @media print {
