--- a/views/archive.jade
+++ b/views/archive.jade
@@ -16,6 +16,6 @@ block contents
 								- if((1 * post.year) == year)
 									tr
 										td
-											a(href=post.url) #{post.title}
+											a.bigger-size(href=post.url) #{post.title}
 										td.post-date(style="width:80px;")
 											small #{post.date}
