--- a/views/home.jade
+++ b/views/home.jade
@@ -17,6 +17,6 @@ block contents
 						- each post in posts
 							tr
 								td
-									a(href=post.url) #{post.title}
+									a.bigger-size(href=post.url) #{post.title}
 								td.post-date(style="width:80px;")
 									small #{post.date}
