--- a/views/about.jade
+++ b/views/about.jade
@@ -23,7 +23,7 @@ mixin about_me
 										img(rel="me",style="margin-right:10px;height:32px;",src="/img/github.png",title="My Github Profile with all my Open Source Efforts",width="32px",height="32px")
 									a(href="http://www.linkedin.com/pub/johann-du-toit/2a/40/402")
 										img(rel="me",style="margin-right:10px;height:32px;",src="/img/linkedin.png",title="My LinkedIn Profile",width="32px",height="32px")
-									a(href="https://twitter.com/exxonno")
+									a(href="https://twitter.com/Johann_du_Toit")
 										img(rel="me",style="height:32px;",src="/img/twitter.png",title="My Twitter Profile",width="32px",height="32px")
 							#meta-image.span4.hidden-phone
 								div(style="margin:15px;",align="center")
