--- a/views/page.jade
+++ b/views/page.jade
@@ -41,12 +41,11 @@ html(lang="en")
 			block contents
 
 		footer
-			.container(style="margin: 0 auto;")
-				.span4.offset2
-					p Copyright Johann du Toit 2012 - #{current_year}
-				.span4
-					a#footer_subscribe_link(href="/atom.xml",style="margin-right:10px;") Subscribe to RSS
-					a#footer_about_link(href="/") About
+			.container(style="margin-top:0;")
+				.span8.offset2
+					p Copyright Johann du Toit 2012 - #{current_year} 
+						a#footer_subscribe_link(href="/atom.xml",style="margin-left:10px;margin-right:10px;") Subscribe to RSS
+						a#footer_about_link(href="/") About
 
 		script(src="/js/prettify.min.js",type="text/javascript")
 		script(type="text/javascript")
