Added link to resume and fixed for url

--- a/views/about.jade
+++ b/views/about.jade
@@ -14,6 +14,9 @@ mixin about_me
 									li Network Engineer
 									li Enthusiast
 
+								h3(style="margin:10px;")
+									a(href="http://www.curriculumvitae.co.za/u/johanndutoit") View my Resume
+									
 								p(style="margin-left:10px;margin-top:15px;")
 									a(href="https://facebook.com/dutoit.johann",width="32px",height="32px")
 										img(rel="me",style="margin-right:10px;height:32px;",src="/img/facebook.png",title="My Facebook Profile",width="32px",height="32px")
