--- a/views/page.jade
+++ b/views/page.jade
@@ -14,8 +14,8 @@ html(lang="en")
 		meta(itemprop="image",content="http://www.johann.co.za/img/johann.jpg")
 		meta(name="viewport",content="width=device-width,initial-scale=1,maximum-scale=1")
 
-		link(rel="alternate",type="application/rss+xml",title="Atom Feed",href="/atom.xml")
-		link(rel="canonical",href="http://www.johann.co.za/")
+		link(rel="alternate",type="application/rss+xml",title="Atom Feed",href="http://johanndutoit.net/atom.xml")
+		link(rel="canonical",href="http://johanndutoit.net/")
 
 		link(href="http://fonts.googleapis.com/css?family=Open+Sans:400,600",rel="stylesheet",media="all")
 		link(href="/css/bootstrap.min.css",rel="stylesheet",type="text/css",media="all")
@@ -50,4 +50,17 @@ html(lang="en")
 		script(src="/js/prettify.min.js",type="text/javascript")
 		script(type="text/javascript")
 			window.prettyPrint && prettyPrint()
+
+		script
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-13256670-7']);
+			_gaq.push(['_setDomainName', 'johanndutoit.net']);
+			_gaq.push(['_trackPageview']);
+
+			(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+
 		block scripts
