Added feed to feedburner, so I can view stats

--- a/views/page.jade
+++ b/views/page.jade
@@ -14,7 +14,7 @@ html(lang="en")
 		meta(itemprop="image",content="http://www.johann.co.za/img/johann.jpg")
 		meta(name="viewport",content="width=device-width,initial-scale=1,maximum-scale=1")
 
-		link(rel="alternate",type="application/rss+xml",title="Atom Feed",href="http://johanndutoit.net/atom.xml")
+		link(rel="alternate",type="application/rss+xml",title="Atom Feed",href="http://feeds.feedburner.com/JohannduToit")
 		link(rel="canonical",href="http://johanndutoit.net/")
 
 		link(href="http://fonts.googleapis.com/css?family=Open+Sans:400,600",rel="stylesheet",media="all")
