Updated site with presentations and added my GDG presentation that I'm working on.

--- a/views/home.jade
+++ b/views/home.jade
@@ -21,3 +21,12 @@ block contents
 									a.bigger-size(href=post.url) #{post.title}
 								td.post-date(style="width:80px;")
 									small #{post.date}
+
+				div(style="margin:20px;")
+					h3 Presentations
+					table.table(style="margin:0;margin-top:10px;width:100%;")
+						tr
+							td
+								a.bigger-size(href="/presentations/2012/10/gdg-capetown-27-oct-2012/index.html") IdentiChip - GDG Cape Town
+							td.post-date(style="width:80px;")
+								small 27 Oct 2012
