Updated presentation date to match layout of site

--- a/views/home.jade
+++ b/views/home.jade
@@ -29,4 +29,4 @@ block contents
 							td
 								a.bigger-size(href="/presentations/2012/10/gdg-capetown-27-oct-2012/index.html") IdentiChip - GDG Cape Town
 							td.post-date(style="width:80px;")
-								small 27 Oct 2012
+								small 2012/10/27
