--- a/views/home.jade
+++ b/views/home.jade
@@ -27,6 +27,11 @@ block contents
 					table.table(style="margin:0;margin-top:10px;width:100%;")
 						tr
 							td
+								a.bigger-size(href="/presentations/2013/05/node-meetup-intro/index.html") Node Meetup Cape Town 29 May 2013
+							td.post-date(style="width:80px;")
+								small 2013/05/29
+						tr
+							td
 								a.bigger-size(href="/presentations/2013/02/gdg-capetown-nodejs-workshop-23-feb-2013/index.html") NodeJS Workshop - GDG Cape Town 23 Feb 2013
 							td.post-date(style="width:80px;")
 								small 2013/02/23
