Added Frame to my Profile Image

--- a/views/about.jade
+++ b/views/about.jade
@@ -30,7 +30,7 @@ mixin about_me
 							#meta-image.span4.hidden-phone
 								div(style="margin:15px;",align="center")
 									center
-										img(src="/img/johann.png")
+										img(src="/img/johann.png",style="border: 4px solid #fff;background-color: #fff;border-radius: 5px;-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.25);box-shadow: 0 1px 1px rgba(0,0,0,.25);")
 
 mixin about_me_footer(posts)
 	- if(posts.length > 0)
