Changed where I'm based

--- a/views/about.jade
+++ b/views/about.jade
@@ -6,7 +6,7 @@ mixin about_me
 						.row
 							.span4
 								h2(style="margin:10px;") Johann du Toit
-								p(style="margin-left:10px;") I have real passion for technology and making systems that help others in their day-to-day lives. Currently based in Stellenbosch, South-Africa
+								p(style="margin-left:10px;") I have real passion for technology and making systems that help others in their day-to-day lives. Currently based in Malmesbury, South-Africa
 
 								ul(style="list-style-type: circle;margin:10px;margin-left:30px;")
 									li Developer
