--- a/views/post.jade
+++ b/views/post.jade
@@ -12,4 +12,16 @@ block contents
 						a(href="/") Johann du Toit
 
 	include about
+
+	.clearfix
+
+	<div id="disqus_thread"></div>
+	script(type="text/javascript")
+		
+		var disqus_shortname = 'johanndutoit';
+		(function() {var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);})();
+
+	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+	<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
 	mixin about_me_footer(recent_posts)
