New Blog Post and Comment Spacing

--- a/views/post.jade
+++ b/views/post.jade
@@ -11,7 +11,7 @@ block contents
 					p(style="font-size:14px;")  Posted on !{post.date} by 
 						a(href="/") Johann du Toit
 
-					.clearfix
+					.clearfix(style="margin-bottom:10px;")
 
 					<div id="disqus_thread"></div>
 					script(type="text/javascript")
