--- a/views/home.jade
+++ b/views/home.jade
@@ -27,7 +27,12 @@ block contents
 					table.table(style="margin:0;margin-top:10px;width:100%;")
 						tr
 							td
-								a.bigger-size(href="/presentations/2013/05/node-meetup-intro-29-may-2013/index.html") Node Meetup Cape Town 29 May 2013
+								a.bigger-size(href="/presentations/2013/06/gdg-lightning-talk-29-june-2013/index.html") Do you even have a bot, bru ? - 29 June 2013
+							td.post-date(style="width:80px;")
+								small 2013/06/29
+						tr
+							td
+								a.bigger-size(href="/presentations/2013/05/node-meetup-intro-29-may-2013/index.html") Node Meetup Cape Town - 29 May 2013
 							td.post-date(style="width:80px;")
 								small 2013/05/29
 						tr
