--- a/views/home.jade
+++ b/views/home.jade
@@ -45,3 +45,183 @@ block contents
 								a.bigger-size(href="/presentations/2012/10/gdg-capetown-27-oct-2012/index.html") IdentiChip - GDG Cape Town
 							td.post-date(style="width:80px;")
 								small 2012/10/27
+
+				div(style="margin:20px;")
+					h3 Portfolio
+					table.table(style="margin:0;margin-top:10px;width:100%;")
+						tr
+							td
+								a.bigger-size(href="http://www.hellobreeder.com") HelloBreeder
+								p(style="margin-top:5px;margin-bottom:0;") Website to Rate Breeders
+							td.post-date(style="width:80px;")
+								small 2013/08/08
+						tr
+							td
+								a.bigger-size(href="#") Interbet Inplay
+								p(style="margin-top:5px;margin-bottom:0;") Realtime Betting System Written in NodeJS
+							td.post-date(style="width:80px;")
+								small 2013/08/31
+						tr
+							td
+								a.bigger-size(href="http://interbet.mobi") Interbet Mobi
+								p(style="margin-top:5px;margin-bottom:0;") Mobile Betting Platform
+							td.post-date(style="width:80px;")
+								small 2013/06/01
+						tr
+							td
+								a.bigger-size(href="http://crm.interbet.co.za:8080") Interbet CRM
+								p(style="margin-top:5px;margin-bottom:0;") CRM to handle mails to Interbet
+							td.post-date(style="width:80px;")
+								small 2013/04/25
+						tr
+							td
+								a.bigger-size(href="#") WhatsUp!
+								p(style="margin-top:5px;margin-bottom:0;") Near me Events Service
+							td.post-date(style="width:80px;")
+								small 2012/11/01
+						tr
+							td
+								a.bigger-size(href="http://www.aft.org") AFT Backbase Portal
+								p(style="margin-top:5px;margin-bottom:0;") Migrated the AFT portal to the new V5
+							td.post-date(style="width:80px;")
+								small 2012/11/01
+						tr
+							td
+								a.bigger-size(href="#") IdentiChip
+								p(style="margin-top:5px;margin-bottom:0;") Microchip Search Engine for all the Microchip Websites
+							td.post-date(style="width:80px;")
+								small 2012/11/01
+						tr
+							td
+								a.bigger-size(href="http://www.amakozi.com/products/reporting.aspx") SDL Reporting
+								p(style="margin-top:5px;margin-bottom:0;") Data Aggregation and Reporting Service
+							td.post-date(style="width:80px;")
+								small 2012/09/01
+						tr
+							td
+								a.bigger-size(href="http://www.johanndutoit.net") My Blog
+								p(style="margin-top:5px;margin-bottom:0;") My Personal blog that I built from the ground up
+							td.post-date(style="width:80px;")
+								small 2012/05/01
+						tr
+							td
+								a.bigger-size(href="http://www.curriculumvitae.co.za") Curriculum Vitae
+								p(style="margin-top:5px;margin-bottom:0;") Online service to build resume's
+							td.post-date(style="width:80px;")
+								small 2012/04/01
+						tr
+							td
+								a.bigger-size(href="#") Geo Notification Server
+								p(style="margin-top:5px;margin-bottom:0;") Server to keep track of Gaurds as they pass checkins with their GPS device
+							td.post-date(style="width:80px;")
+								small 2012/02/01
+						tr
+							td
+								a.bigger-size(href="https://github.com/Johanndutoit/Zip-to-FTP-Backup") FTP Backup Zipper
+								p(style="margin-top:5px;margin-bottom:0;") Script to Zip and Upload Backups to a Remote FTP server
+							td.post-date(style="width:80px;")
+								small 2012/02/01
+						tr
+							td
+								a.bigger-size(href="http://www.food4pets.co.za") Food 4 Pets
+								p(style="margin-top:5px;margin-bottom:0;") E-Commerce Website for Animal Products
+							td.post-date(style="width:80px;")
+								small 2011/11/22
+						tr
+							td
+								a.bigger-size(href="https://github.com/Johanndutoit/Curriculum-Vitae-Manager") Curriculum Vitae Generation Script
+								p(style="margin-top:5px;margin-bottom:0;") Script that I used to generate my Resume
+							td.post-date(style="width:80px;")
+								small 2011/10/21
+						tr
+							td
+								a.bigger-size(href="http://www.cmsalliance.com") CMS Alliance
+								p(style="margin-top:5px;margin-bottom:0;") Website for Consulting Companies to Signup
+							td.post-date(style="width:80px;")
+								small 2011/04/01
+						tr
+							td
+								a.bigger-size(href="http://www.getmeknown.co.za") Get Me Known
+								p(style="margin-top:5px;margin-bottom:0;") National Microchip Database
+							td.post-date(style="width:80px;")
+								small 2011/04/01
+						tr
+							td
+								a.bigger-size(href="http://www.getmehome.co.za") Get Me Home
+								p(style="margin-top:5px;margin-bottom:0;") Tag Identification Database
+							td.post-date(style="width:80px;")
+								small 2011/01/01
+						tr
+							td
+								a.bigger-size(href="http://www.btri.co.za") Bull-Terrier Rescue
+								p(style="margin-top:5px;margin-bottom:0;") Did some Charity Website for a Non-Profit Dog Rescue
+							td.post-date(style="width:80px;")
+								small 2010/12/01
+
+				div(style="margin:20px;")
+					h3 Qualifications
+					table.table(style="margin:0;margin-top:10px;width:100%;")
+						tr
+							td
+								.bigger-size BSC Informatics (Expecting to Graduate in 2016)
+							td.post-date(style="width:60px;")
+								small 2013/01
+						tr
+							td
+								.bigger-size MCDB - Microsoft Certified Database Developer
+							td.post-date(style="width:60px;")
+								small 2012/03
+						tr
+							td
+								.bigger-size Oracle Certified Professional, Java SE 6 Programmer
+							td.post-date(style="width:60px;")
+								small 2011/10
+						tr
+							td
+								.bigger-size CCNP - Cisco Certified Network Professional
+							td.post-date(style="width:60px;")
+								small 2011/09
+						tr
+							td
+								.bigger-size CCNA - Cisco Certified Network Associate
+							td.post-date(style="width:60px;")
+								small 2010/10
+						tr
+							td
+								.bigger-size MCTS - Microsoft Certified Technology Specialist
+							td.post-date(style="width:60px;")
+								small 2010/04
+						tr
+							td
+								.bigger-size ITIL Foundations V3 (Green Badge)
+							td.post-date(style="width:60px;")
+								small 2010/07
+						tr
+							td
+								.bigger-size CPB Project Management
+							td.post-date(style="width:60px;")
+								small 2010/06
+						tr
+							td
+								.bigger-size MCPD - Microsoft Certified Professional Developer
+							td.post-date(style="width:60px;")
+								small 2010/08
+						tr
+							td
+								.bigger-size MCITP - Microsoft Certified IT Professional
+							td.post-date(style="width:60px;")
+								small 2010/04
+
+				div(style="margin:20px;")
+					h3 Achievements
+					table.table(style="margin:0;margin-top:10px;width:100%;")
+						tr
+							td
+								.bigger-size Won the 2013 ScaleConf Google App Engine Hackathon
+							td.post-date(style="width:40px;")
+								small 2013
+						tr
+							td
+								.bigger-size Google Apps Developer Challenge 2012 Finalist
+							td.post-date(style="width:40px;")
+								small 2012
