Added link to presentation

--- a/views/home.jade
+++ b/views/home.jade
@@ -25,6 +25,12 @@ block contents
 				div(style="margin:20px;")
 					h3 Presentations
 					table.table(style="margin:0;margin-top:10px;width:100%;")
+
+						tr
+							td
+								a.bigger-size(href="/presentations/2013/09/humanipo-google-apps-for-startups-21-09-2013/index.html") HumanIPO Google Apps for Startups - 21 Sept 2013
+							td.post-date(style="width:80px;")
+								small 2013/09/21
 						tr
 							td
 								a.bigger-size(href="/presentations/2013/06/gdg-lightning-talk-29-june-2013/index.html") Do you even have a bot, bru ? - 29 June 2013
