--- a/views/home.jade
+++ b/views/home.jade
@@ -28,6 +28,11 @@ block contents
 
 						tr
 							td
+								a.bigger-size(href="http://johanndutoit.net/presentations/2013/10/appengine-intro-pycon-03-10-2013") PyConZa 2013 App Engine Tutorial - 3 Oct 2013
+							td.post-date(style="width:80px;")
+								small 2013/10/03
+						tr
+							td
 								a.bigger-size(href="/presentations/2013/09/humanipo-google-apps-for-startups-21-09-2013/index.html") HumanIPO Google Apps for Startups - 21 Sept 2013
 							td.post-date(style="width:80px;")
 								small 2013/09/21
