--- a/views/home.jade
+++ b/views/home.jade
@@ -28,6 +28,12 @@ block contents
 
 						tr
 							td
+								a.bigger-size(href="http://johanndutoit.net/presentations/2013/12/js-intro-14-12-2013") Intro to JS with Backbone and Google Maps - 14 Dec 2013
+							td.post-date(style="width:80px;")
+								small 2013/12/14
+
+						tr
+							td
 								a.bigger-size(href="http://johanndutoit.net/presentations/2013/10/appengine-intro-pycon-03-10-2013") PyConZa 2013 App Engine Tutorial - 3 Oct 2013
 							td.post-date(style="width:80px;")
 								small 2013/10/03
