Updated to PHPSouthAfrica Blog Post and added missing presentations to list

--- a/views/home.jade
+++ b/views/home.jade
@@ -28,6 +28,12 @@ block contents
 
 						tr
 							td
+								a.bigger-size(href="http://johanndutoit.net/presentations/2014/04/realtime-apps-04-april-2014") PHP South-Africa / Building realtime apps - 04 April 2014
+							td.post-date(style="width:80px;")
+								small 2014/04/04
+
+						tr
+							td
 								a.bigger-size(href="http://johanndutoit.net/presentations/2013/12/js-intro-14-12-2013") Intro to JS with Backbone and Google Maps - 14 Dec 2013
 							td.post-date(style="width:80px;")
 								small 2013/12/14
