--- a/assets/presentations/2014/04/realtime-apps-04-april-2014/theme/css/default.css
+++ b/assets/presentations/2014/04/realtime-apps-04-april-2014/theme/css/default.css
@@ -295,7 +295,7 @@ slides > slide.dark {
 /* line 171, ../scss/default.scss */
 slides > slide:not(.nobackground):before {
   font-size: 12pt;
-  content: "#phpcraft-bloodsweatandrealtime";
+  content: "#bloodsweatandrealtime";
   position: absolute;
   bottom: 20px;
   left: 60px;
