--- a/views/home.jade
+++ b/views/home.jade
@@ -7,9 +7,12 @@ block contents
 	div#main-page-container.container
 		div.row
 			div.span8.offset2
-				center(align="center",style="margin-top:35px;")
-					p(style="font-size:20px;") Keep it Simple Stupid
-					small Now that's a Motto!
+
+				div(style="margin:20px;")
+					h2(style="text-align:center;margin: 15px 0;") #AfricaConnected - About Me
+					h5
+						a(href="") 
+					<iframe width="100%" height="360" src="//www.youtube.com/embed/i--7lD7JVxs" frameborder="0" allowfullscreen></iframe>
 
 				div(style="margin:20px;")
 					a(href="/archive.html",style="float:right;margin:5px;") View All Posts
@@ -28,7 +31,7 @@ block contents
 
 						tr
 							td
-								a.bigger-size(href="http://johanndutoit.net/presentations/2014/05/realtime-apps-05-april-2014") PHP South-Africa / Building realtime apps - 05 April 2014
+								a.bigger-size(href="http://johanndutoit.net/presentations/2014/04/realtime-apps-05-april-2014") PHP South-Africa / Building realtime apps - 05 April 2014
 							td.post-date(style="width:80px;")
 								small 2014/04/05
 
@@ -72,6 +75,18 @@ block contents
 				div(style="margin:20px;")
 					h3 Portfolio
 					table.table(style="margin:0;margin-top:10px;width:100%;")
+						tr
+							td
+								a.bigger-size(href="http://twify.io") Twify
+								p(style="margin-top:5px;margin-bottom:0;") Manage hotspots in the cloud
+							td.post-date(style="width:80px;")
+								small 2014/*
+						tr
+							td
+								a.bigger-size(href="http://gcdc2013-capecommuters.appspot.com") Cape Commuter
+								p(style="margin-top:5px;margin-bottom:0;") API for Cape Town Commuter of schedules for MyCiti and Train schedule
+							td.post-date(style="width:80px;")
+								small 2014/01/29
 						tr
 							td
 								a.bigger-size(href="http://www.hellobreeder.com") HelloBreeder
@@ -238,6 +253,17 @@ block contents
 				div(style="margin:20px;")
 					h3 Achievements
 					table.table(style="margin:0;margin-top:10px;width:100%;")
+						tr
+							td
+								.bigger-size 
+									a(href="http://www.ybl.co.za/google-names-africas-top-20-innovators-using-internet-to-change-lives/") Named as one of Africa's top 20 Innovators changing lives with the web by Google
+							td.post-date(style="width:40px;")
+								small 2014
+						tr
+							td
+								.bigger-size Google Cloud Developer Challenge 2013 Finalist
+							td.post-date(style="width:40px;")
+								small 2013
 						tr
 							td
 								.bigger-size Won the 2013 ScaleConf Google App Engine Hackathon
