Added new presentation

--- a/views/home.jade
+++ b/views/home.jade
@@ -31,6 +31,12 @@ block contents
 
 						tr
 							td
+								a.bigger-size(href="https://speakerdeck.com/johanndutoit/made-in-africa-programming-and-how-its-pushing-africa-forward") Made in Africa: Programming and how it's pushing Africa forward - 28 May 2014
+							td.post-date(style="width:80px;")
+								small 2014/05/28
+
+						tr
+							td
 								a.bigger-size(href="http://johanndutoit.net/presentations/2014/04/realtime-apps-05-april-2014") PHP South-Africa / Building realtime apps - 05 April 2014
 							td.post-date(style="width:80px;")
 								small 2014/04/05
