Updated with the new presentation that I'm going to be doing this weekend

--- a/views/home.jade
+++ b/views/home.jade
@@ -31,7 +31,13 @@ block contents
 
 						tr
 							td
-								a.bigger-size(href="https://speakerdeck.com/johanndutoit/made-in-africa-programming-and-how-its-pushing-africa-forward") Made in Africa: Programming and how it's pushing Africa forward - 28 May 2014
+								a.bigger-size(href="#") The Grunt(Js) work of single-page apps - When developing single page apps it's important to know what you're getting into. This talk give some insight into a workflow with GruntJs which includes compilation; templates; scripts; pre-rendering for organic SEO and deployment to the Google Cloud
+							td.post-date(style="width:80px;")
+								small 2014/05/31
+
+						tr
+							td
+								a.bigger-size(href="https://speakerdeck.com/johanndutoit/made-in-africa-programming-and-how-its-pushing-africa-forward") Made in Africa - Programming and how it's pushing Africa forward
 							td.post-date(style="width:80px;")
 								small 2014/05/28
 
