Updated layout and added a quick frontpage view to my new slides

--- a/views/home.jade
+++ b/views/home.jade
@@ -31,7 +31,7 @@ block contents
 
 						tr
 							td
-								a.bigger-size(href="#") The Grunt(Js) work of single-page apps - When developing single page apps it's important to know what you're getting into. This talk give some insight into a workflow with GruntJs which includes compilation; templates; scripts; pre-rendering for organic SEO and deployment to the Google Cloud
+								a.bigger-size(href="javascript:void(0);",onclick="alert('Not yet eager beaver ...');return false;") The Grunt(Js) work of single-page apps - JSinSA.co.za
 							td.post-date(style="width:80px;")
 								small 2014/05/31
 
@@ -43,39 +43,39 @@ block contents
 
 						tr
 							td
-								a.bigger-size(href="http://johanndutoit.net/presentations/2014/04/realtime-apps-05-april-2014") PHP South-Africa / Building realtime apps - 05 April 2014
+								a.bigger-size(href="http://johanndutoit.net/presentations/2014/04/realtime-apps-05-april-2014") PHP South-Africa / Building realtime apps
 							td.post-date(style="width:80px;")
 								small 2014/04/05
 
 						tr
 							td
-								a.bigger-size(href="http://johanndutoit.net/presentations/2013/12/js-intro-14-12-2013") Intro to JS with Backbone and Google Maps - 14 Dec 2013
+								a.bigger-size(href="http://johanndutoit.net/presentations/2013/12/js-intro-14-12-2013") Intro to JS with Backbone and Google Maps
 							td.post-date(style="width:80px;")
 								small 2013/12/14
 
 						tr
 							td
-								a.bigger-size(href="http://johanndutoit.net/presentations/2013/10/appengine-intro-pycon-03-10-2013") PyConZa 2013 App Engine Tutorial - 3 Oct 2013
+								a.bigger-size(href="http://johanndutoit.net/presentations/2013/10/appengine-intro-pycon-03-10-2013") PyConZa 2013 App Engine Tutorial
 							td.post-date(style="width:80px;")
 								small 2013/10/03
 						tr
 							td
-								a.bigger-size(href="/presentations/2013/09/humanipo-google-apps-for-startups-21-09-2013/index.html") HumanIPO Google Apps for Startups - 21 Sept 2013
+								a.bigger-size(href="/presentations/2013/09/humanipo-google-apps-for-startups-21-09-2013/index.html") HumanIPO Google Apps for Startups
 							td.post-date(style="width:80px;")
 								small 2013/09/21
 						tr
 							td
-								a.bigger-size(href="/presentations/2013/06/gdg-lightning-talk-29-june-2013/index.html") Do you even have a bot, bru ? - 29 June 2013
+								a.bigger-size(href="/presentations/2013/06/gdg-lightning-talk-29-june-2013/index.html") Do you even have a bot, bru ?
 							td.post-date(style="width:80px;")
 								small 2013/06/29
 						tr
 							td
-								a.bigger-size(href="/presentations/2013/05/node-meetup-intro-29-may-2013/index.html") Node Meetup Cape Town - 29 May 2013
+								a.bigger-size(href="/presentations/2013/05/node-meetup-intro-29-may-2013/index.html") Resolving your intimacy problems with NodeJS
 							td.post-date(style="width:80px;")
 								small 2013/05/29
 						tr
 							td
-								a.bigger-size(href="/presentations/2013/02/gdg-capetown-nodejs-workshop-23-feb-2013/index.html") NodeJS Workshop - GDG Cape Town 23 Feb 2013
+								a.bigger-size(href="/presentations/2013/02/gdg-capetown-nodejs-workshop-23-feb-2013/index.html") NodeJS Workshop - GDG Cape Town
 							td.post-date(style="width:80px;")
 								small 2013/02/23
 						tr
