Updated format a bit and added new details

--- a/views/home.jade
+++ b/views/home.jade
@@ -31,7 +31,7 @@ block contents
 
 						tr
 							td
-								a.bigger-size(href="javascript:void(0);",onclick="alert('Not yet eager beaver ...');return false;") The Grunt(Js) work of single-page apps - JSinSA.co.za
+								a.bigger-size(href="javascript:void(0);",onclick="alert('Not yet eager beaver ...');return false;") The Grunt(Js) work of single-page apps
 							td.post-date(style="width:80px;")
 								small 2014/05/31
 
@@ -265,6 +265,12 @@ block contents
 				div(style="margin:20px;")
 					h3 Achievements
 					table.table(style="margin:0;margin-top:10px;width:100%;")
+						tr
+							td
+								.bigger-size
+									a(href="developer.google.com/experts") Named a GDE for Cloud by Google, first in Africa
+							td.post-date(style="width:40px;")
+								small 2014
 						tr
 							td
 								.bigger-size 
