Updated layout a bit and added my latest presentation

--- a/views/about.jade
+++ b/views/about.jade
@@ -12,9 +12,8 @@ mixin about_me
 									li Developer
 									li Server Administrator
 									li Network Engineer
+									li Team Lead
 									li Enthusiast
-
-								br
 
 								p(style="margin-left:10px;margin-top:15px;")
 									a(href="https://facebook.com/dutoit.johann",width="32px",height="32px")
