--- a/views/home.jade
+++ b/views/home.jade
@@ -31,7 +31,25 @@ block contents
 
 						tr
 							td
-								a.bigger-size(href="javascript:void(0);",onclick="alert('Not yet eager beaver ...');return false;") The Grunt(Js) work of single-page apps
+								a.bigger-size(href="http://johanndutoit.net/presentations/2014/09/resolving-your-intimacy-issues-with-nodejs-29-sept-2014") Resolving your intimacy problems with NodeJS
+							td.post-date(style="width:80px;")
+								small 2014/09/29
+
+						tr
+							td
+								a.bigger-size(href="https://speakerdeck.com/johanndutoit/nodejs-with-the-google-cloud") NodeJS with the Google Cloud
+							td.post-date(style="width:80px;")
+								small 2014/07/29
+
+						tr
+							td
+								a.bigger-size(href="https://speakerdeck.com/johanndutoit/kat-o-made-in-africa") KAT-O - Made in Africa
+							td.post-date(style="width:80px;")
+								small 2014/06/18
+
+						tr
+							td
+								a.bigger-size(href="https://speakerdeck.com/johanndutoit/the-grunt-js-work-of-single-page-apps") The Grunt(Js) work of single-page apps
 							td.post-date(style="width:80px;")
 								small 2014/05/31
 
@@ -89,10 +107,22 @@ block contents
 					table.table(style="margin:0;margin-top:10px;width:100%;")
 						tr
 							td
+								a.bigger-size(href="https://atomcert.com") Atom<Strong>Cert</strong>
+								p(style="margin-top:5px;margin-bottom:0;") Manage and create your certificates efficiently in a UI that won't fight you
+							td.post-date(style="width:80px;")
+								small 2014/10/02
+						tr
+							td
+								a.bigger-size(href="http://loadshedding.johanndutoit.net") Cape Town Loadshedding Map
+								p(style="margin-top:5px;margin-bottom:0;") Easy to use loadshedding map for Cape Town
+							td.post-date(style="width:80px;")
+								small 2014/06/01
+						tr
+							td
 								a.bigger-size(href="http://twify.io") Twify
 								p(style="margin-top:5px;margin-bottom:0;") Manage hotspots in the cloud
 							td.post-date(style="width:80px;")
-								small 2014/*
+								small 2014/03/01
 						tr
 							td
 								a.bigger-size(href="http://gcdc2013-capecommuters.appspot.com") Cape Commuter
