--- a/views/page.jade
+++ b/views/page.jade
@@ -1,4 +1,4 @@
-doctype 5
+doctype html
 <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
@@ -33,8 +33,6 @@ html(lang="en")
 							a#header_about_link(style="float:right;margin-top:2px;",href="/") About
 							a#blog-name(href="/")
 								h3 Johann du Toit
-							span#slogan-block(style="margin-left:5px;margin-top:5px;")
-								p(style="style="float:left;") | My crazy adventures with Computers.
 						.clearfix(style="margin-bottom:10px;")
 		
 		#mainpage
@@ -48,10 +46,8 @@ html(lang="en")
 						a#footer_about_link(href="/") About
 
 		script(src="/js/prettify.min.js",type="text/javascript")
-		script(type="text/javascript")
+		script(type="text/javascript").
 			window.prettyPrint && prettyPrint()
-
-		script
 			var _gaq = _gaq || [];
 			_gaq.push(['_setAccount', 'UA-13256670-7']);
 			_gaq.push(['_setDomainName', 'johanndutoit.net']);
