--- a/views/post.jade
+++ b/views/post.jade
@@ -5,8 +5,7 @@ block contents
 		div.row
 			div.span8.offset2
 				div(style="margin:20px;")
-					!{post.content}
-
+					| !{post.content}
 					hr
 					p(style="font-size:14px;")  Posted on !{post.date} by 
 						a(href="/") Johann du Toit
@@ -14,8 +13,7 @@ block contents
 					.clearfix(style="margin-bottom:15px;")
 
 					<div id="disqus_thread"></div>
-					script(type="text/javascript")
-						
+					script(type="text/javascript").
 						var disqus_shortname = 'johanndutoit';
 						(function() {var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);})();
 
