Created both presentations for Nodejs

--- a/views/home.jade
+++ b/views/home.jade
@@ -31,6 +31,12 @@ block contents
 
 						tr
 							td
+								a.bigger-size(href="http://johanndutoit.net/presentations/2014/09/meetup-resolving-your-intimacy-issues-with-nodejs-29-sept-2014") Resolving your intimacy problems with NodeJS
+							td.post-date(style="width:80px;")
+								small 2014/09/29
+
+						tr
+							td
 								a.bigger-size(href="http://johanndutoit.net/presentations/2014/09/resolving-your-intimacy-issues-with-nodejs-29-sept-2014") Resolving your intimacy problems with NodeJS
 							td.post-date(style="width:80px;")
 								small 2014/09/29
