added new homepage item

--- a/views/home.jade
+++ b/views/home.jade
@@ -31,7 +31,7 @@ block contents
 
 						tr
 							td
-								a.bigger-size(href="http://johanndutoit.net/presentations/2014/09/meetup-resolving-your-intimacy-issues-with-nodejs-29-sept-2014") Resolving your intimacy problems with NodeJS
+								a.bigger-size(href="http://johanndutoit.net/presentations/2014/09/meetup-resolving-your-intimacy-issues-with-nodejs-29-sept-2014") Resolving your intimacy problems with NodeJS for NodeJS Cape Town (meetup.com/nodecpt)
 							td.post-date(style="width:80px;")
 								small 2014/09/29
 
